# python-project-lvl1

./: .gitignore  Makefile  README.MD  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
brain_games/: cli.py  engine.py  even.py  main_loop.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
rasalhague2020_brain_games.egg-info/: PKG-INFO  SOURCES.txt
