[tool.poetry]
name = "Rasalhague2020_brain_games"
version = "0.5.0"
description = "Just a set of simple programs united by a common logic of work."
authors = ["Yury Silushkin <yusilushkin@yandex.ru>"]
classifiers = [
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Topic :: Education :: Testing"
]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/Rasalhague2020/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
